# shopify_pj

./: .gitignore  README.md
dataload/: .env.example  .gitignore  README.md  pyproject.toml  shopify_pipeline.py
dataload/.dlt/: config.toml  secrets.toml.example
dataload/shopify_source/: __init__.py  bulk.py  helpers.py  queries.py
dataload_research/: .env.example  .gitignore  README.md  dlt_probe.py  pyproject.toml  queries.py  raw_probe.py  shopify_client.py
dataload_rest/: .env.example  README.md  pyproject.toml  rest_pipeline.py
dataload_rest/.dlt/: config.toml  secrets.toml.example
dataload_rest/rest_source/: __init__.py  endpoints.py  helpers.py
docs/: 01-raw-source-tables.md  02-staging-tables.md  03-intermediate-tables.md  04-marts-tables.md  README.md
docs/apireference/: README.md  shopify-data-model.md
docs/intermediate_tables/: README.md  int_abandoned_checkouts__enriched.md  int_customers__enriched.md  int_discounts__enriched.md  int_order_lines__enriched.md  int_orders__enriched.md  int_product_collections.md  int_products__enriched.md
docs/marts_tables/: README.md  dim_collections.md  dim_customers.md  dim_locations.md  dim_products.md  fct_abandoned_checkouts.md  fct_discount_performance.md  fct_fulfillments.md  fct_inventory_levels.md  fct_order_lines.md  fct_order_transactions.md  fct_orders.md  fct_refunds.md  product_collections.md
docs/raw_source_tables/: README.md  abandoned_checkout_line_items.md  abandoned_checkouts.md  (+21 more)
elt/: .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
shopifystore/: README.md
(+72 files in other folders)
