[project]
name = "shopify-dataload-research"
version = "0.1.0"
description = "Shopify API 調査用サンドボックス (非 Bulk・少量取得。dbt には流さない)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dlt[duckdb]>=1.6.0",
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
package = false
